fixed text overflowing on delete confirm page.

--- a/website/static/css/delete-confirm.css
+++ b/website/static/css/delete-confirm.css
@@ -22,6 +22,8 @@
     color: #294659;
     text-shadow: 0px 0px 1px black;
     margin-bottom: 30px;
+    width: 90%;
+    overflow-wrap: break-word;
     &:hover {
         cursor:default;
     }
